--- a/app/templates/review.html
+++ b/app/templates/review.html
@@ -101,7 +101,7 @@
             </ul>
         </header><!-- .review__title-bar -->
 
-        <div class="color-bar article-color">
+        <div class="color-bar article-color" title="Whiskey color">
             <span class="color-bar__marker" style="left: {{ review.color }}%"></span>
         </div>
 
