--- a/app/static/sass/base/_variables.scss
+++ b/app/static/sass/base/_variables.scss
@@ -26,7 +26,7 @@ $gray-light: #828893;
 $gray-mid: #6c7e8d;
 $gray-dark: #1b1e23;
 
-$copy: #4a5462;
+$copy: #596677;
 $primary: #0f8f98;
 $primary-light: desaturate(lighten($primary, 25%), 40%);
 $primary-dark: darken($primary, 8%);
