--- a/app/static/sass/layout/_header.scss
+++ b/app/static/sass/layout/_header.scss
@@ -11,6 +11,8 @@ The global page header
     @extend .group;
     @extend .title;
     padding: $line/2 $line;
+    position: relative;
+    z-index: 10;
 }
 
 .header-logo {
@@ -128,6 +130,9 @@ The global page header
 
     .page-header {
         padding: $line $line*2 0;
+        &--home {
+            padding: $line*4 $line*2 0;
+        }
     }
 
     .header-logo {
@@ -137,6 +142,10 @@ The global page header
         }
         &__type {
             font-size: $kilo;
+            .page-header--home &, .page-header--home .header-logo:hover & {
+                color: #fff;
+                text-shadow: 0 1px 2px rgba(0,0,0,0.3);
+            }
         }
     }
 
@@ -166,6 +175,16 @@ The global page header
                     box-shadow: 0 2px 0 $bg, 0 6px 0 $primary;
                 }
             }
+            .page-header--home & {
+                color: #fff;
+                text-shadow: 0 1px 2px rgba(0,0,0,0.3);
+                span {
+                    box-shadow: 0 4px 0 rgba(255,255,255,0.3);
+                }
+                &:hover span {
+                    box-shadow: 0 4px 0 #fff;
+                }
+            }
         }
         .page-header--admin & {
             margin-right: -$line/2;
@@ -179,7 +198,10 @@ The global page header
 
 @media #{$min-l} {
     .page-header {
-        padding: $line*3 $line*2 $line*1;
+        padding: $line*2.5 $line*2 $line*1;
+        &--home {
+            padding-top: $line*6;
+        }
         &--article {
             margin-left: 35%;
             .page-bound {
