--- a/app/static/sass/module/_title-bar.scss
+++ b/app/static/sass/module/_title-bar.scss
@@ -125,8 +125,9 @@ Title Bars
         }
         &__subtitle {
             font-size: $peta;
-            line-height: $line*2;
+            line-height: $line*1.5;
             margin-right: 0;
+            margin-top: $line/4;
         }
         &--review {
             .title-bar__title {
