--- a/app/static/sass/module/_grids.scss
+++ b/app/static/sass/module/_grids.scss
@@ -35,7 +35,7 @@ A handy utility ltr grid
   }
 }
 
-.grid__unit--1-2 { width: 50%; }
+.grid__unit--1-2, .image-grid__item { width: 50%; }
 
 .grid__unit--1-3 { width: 33.33%; }
 .grid__unit--2-3 { width: 66.66%; }
@@ -56,7 +56,7 @@ $unit-1-6: 16.66%;
 @media #{$min-s} {
   .grid__unit--1-2-s { width: 50%; }
 
-  .grid__unit--1-3-s { width: 33.33%; }
+  .grid__unit--1-3-s, .image-grid__item { width: 33.33%; }
   .grid__unit--2-3-s { width: 66.66%; }
 
   .grid__unit--1-4-s { width: 25%; }
@@ -113,7 +113,7 @@ $unit-1-6: 16.66%;
   .grid__unit--1-3-l { width: 33.33%; }
   .grid__unit--2-3-l { width: 66.66%; }
 
-  .grid__unit--1-4-l { width: 25%; }
+  .grid__unit--1-4-l, .image-grid__item { width: 25%; }
   .grid__unit--3-4-l { width: 75%; }
 
   .grid__unit--1-5-l { width: 20%; }
@@ -141,6 +141,6 @@ $unit-1-6: 16.66%;
   .grid__unit--3-5-w { width: 60%; }
   .grid__unit--4-5-w { width: 80%; }
 
-  .grid__unit--1-6-w { width: $unit-1-6; }
+  .grid__unit--1-6-w, .image-grid__item { width: $unit-1-6; }
   .grid__unit--5-6-w { width: $unit-1-6 * 5; }
 }
