--- a/app/templates/admin_index.html
+++ b/app/templates/admin_index.html
@@ -31,7 +31,7 @@
                                     {% else %}
                                         <span class="admin-list__published admin-list__published--unpublished">Unpublished</span>
                                     {% endif %}
-                                    <a href="{{ url_for('admin_remove_review', review_id=review.id) }}" class="admin-list__remove"><img src="/static/images/icon-x.png" alt="" /></a>
+                                    <a href="{{ url_for('admin_remove_review', review_id=review.id) }}" class="admin-list__remove careful-remove"><img src="/static/images/icon-x.png" alt="" /></a>
                                 </li>
                             {% endfor %}
                         </ul>
@@ -49,7 +49,7 @@
                                     {% else %}
                                         <span class="admin-list__published admin-list__published--unpublished">Unpublished</span>
                                     {% endif %}
-                                    <a href="{{ url_for('admin_remove_article', article_id=article.id) }}" class="admin-list__remove"><img src="/static/images/icon-x.png" alt="" /></a>
+                                    <a href="{{ url_for('admin_remove_article', article_id=article.id) }}" class="admin-list__remove careful-remove"><img src="/static/images/icon-x.png" alt="" /></a>
                                 </li>
                             {% endfor %}
                         </ul>
