--- a/app/templates/admin_edit_origin.html
+++ b/app/templates/admin_edit_origin.html
@@ -24,6 +24,11 @@
                     <input type="text" name="name" value="{{ origin.name }}" tabindex="1" />
                 </label>
 
+                <label class="form-label">
+                    <span class="form-label__text">Filter Name</span>
+                    <input type="text" name="filter_name" value="{{ origin.filter_name }}" tabindex="1" />
+                </label>
+
                 <button class="button" type="submit" tabindex="1">Save</button>
             </form>
         </div>
