--- a/app/templates/admin_edit_review.html
+++ b/app/templates/admin_edit_review.html
@@ -183,6 +183,12 @@
                     </div>
                 </div>
 
+                <label class="form-label">
+                    <span class="form-label__text">Related Reviews</span>
+                    <input type="text" name="related_reviews" value="{{ related_reviews }}" tabindex="1" />
+                    <p class="form-label__help">Space-delimited IDs, plz</p>
+                </label>
+
                 <button class="button admin-write__bottom-save" type="submit" tabindex="1">Save</button>
             </form>
         </div>
