--- a/app/templates/admin_list_reviews.html
+++ b/app/templates/admin_list_reviews.html
@@ -25,11 +25,14 @@
                             <h4 class="admin-list__title">
                                 <a href="{{ url_for('admin_edit_review', review_id=review.id) }}">{{ review.title }} {{ review.subtitle }}</a>
                             </h4>
+                            ID: <strong>{{ review.id }}</strong>
+                            /
                             {% if review.is_published %}
-                                <span class="admin-list__published">Published</span>,
+                                <span class="admin-list__published">Published</span>
                             {% else %}
-                                <span class="admin-list__published admin-list__published--unpublished">Unpublished</span>,
+                                <span class="admin-list__published admin-list__published--unpublished">Unpublished</span>
                             {% endif %}
+                            /
                             <span class="admin-list__written">written {{ review.date_posted|datetime }}</span>
                             <p class="admin-list__description">{{ review.abstract }}</p>
                             <a href="{{ url_for('admin_remove_review', review_id=review.id) }}" class="admin-list__remove careful-remove"><img src="/static/images/icon-x.png" alt="" /></a>
