--- a/app/templates/admin_new_file.html
+++ b/app/templates/admin_new_file.html
@@ -9,9 +9,13 @@
 
         <div class="content">
             <form action="{{ url_for('upload_file') }}" method="POST" enctype="multipart/form-data" class="page-bound">
-                <input type="file" name="file" />
-
-                <button class="button" type="submit" tabindex="1">Save</button>
+                <button class="button" type="submit" style="float: right;" tabindex="1">Save</button>
+                <label class="form-label">
+                    <span class="form-label__text">Files to upload</span>
+                    <input type="file" name="files[]" multiple="multiple" data-lists-to="file-list" />
+                    <p class="form-label__help">Supported types are .jpg, .jpeg, .png</p>
+                    <ul id="file-list" class="item-list"></ul>
+                </label>
             </form>
         </div>
     </section>
