Add a dedicated homepage image field on articles, reviews

--- a/app/templates/admin_edit_review.html
+++ b/app/templates/admin_edit_review.html
@@ -48,13 +48,19 @@
                     <span class="form-label__text">Main image</span>
                     <input type="text" name="image_main" value="{{ review.image_main }}" tabindex="1" id="main-image" />
                     <button type="button" class="button" data-fills-image-input="main-image">Browse</button>
-                    <p class="form-label__help">Large review detail image. 1024x768, approx</p>
+                    <p class="form-label__help">Large review detail image. 600x900, approx</p>
                 </label>
                 <label class="form-label">
                     <span class="form-label__text">List image</span>
                     <input type="text" name="image_list" value="{{ review.image_list }}" tabindex="1" id="list-image" />
                     <button type="button" class="button" data-fills-image-input="list-image">Browse</button>
                     <p class="form-label__help">List background image. 300x200, approx</p>
+                </label>
+                <label class="form-label">
+                    <span class="form-label__text">Homepage image</span>
+                    <input type="text" name="image_home" value="{{ review.image_home }}" tabindex="1" id="home-image" />
+                    <button type="button" class="button" data-fills-image-input="home-image">Browse</button>
+                    <p class="form-label__help">Image featured on the homepage when this is the latest review. 1024x768, approx</p>
                 </label>
 
 
