Apply some touchups

--- a/app/templates/admin_edit_article.html
+++ b/app/templates/admin_edit_article.html
@@ -56,6 +56,12 @@
                     <button type="button" class="button" data-fills-image-input="list-image">Browse</button>
                     <p class="form-label__help">List background image. 300x200, approx</p>
                 </label>
+                <label class="form-label">
+                    <span class="form-label__text">Homepage image</span>
+                    <input type="text" name="image_home" value="{{ article.image_home }}" tabindex="1" id="home-image" />
+                    <button type="button" class="button" data-fills-image-input="home-image">Browse</button>
+                    <p class="form-label__help">Image featured on the homepage when this is the latest review. 1024x768, approx</p>
+                </label>
 
 
                 <h2>Content</h2>
