--- a/app/static/sass/layout/_body.scss
+++ b/app/static/sass/layout/_body.scss
@@ -38,6 +38,7 @@ body {
 @media #{$min-m} {
     body {
         background: $bg url('../images/bg-barrels.jpg') no-repeat 50% 0;
+        background: #000;
     }
     .content {
         padding: $line*2;
