--- a/app/static/sass/module/_forms.scss
+++ b/app/static/sass/module/_forms.scss
@@ -28,7 +28,7 @@ Forms
     }
 }
 
-input[type="text"], input[type="number"], select, textarea {
+input[type="text"], input[type="password"], input[type="number"], select, textarea {
     display: block;
     width: 100%;
     padding: $line/4 $line/2;
