Add range slider params to reviews page filter rundown

--- a/app/static/sass/layout/_search.scss
+++ b/app/static/sass/layout/_search.scss
@@ -80,6 +80,9 @@ Search Pages
             transform: rotate(90deg);
         }
     }
+    .form-label {
+        margin-bottom: 0;
+    }
 }
 
 .search-current-filters {
