--- a/app/templates/review_list.html
+++ b/app/templates/review_list.html
@@ -32,6 +32,7 @@
                         {% else %}
                             whiskies
                         {% endif %}
+
                         {% if request.args['age_low'] and request.args['age_high'] %}
                             between
                         {% endif %}
@@ -65,20 +66,45 @@
                                 {% endif %}
                             </a>{% if adjectives > 2 %},{% endif %}
                         {% endif %}
+
                         {% if request.args['origin'] %}
                             {% if adjectives > 1 and last_adjective == 'origin' %}
                                 and
                             {% endif %}
                             distilled in
-                            <a href="{{ modify_query(origin=None) }}" class="search-current-filters__close">{{ this_origin.name }}</a>{% if adjectives > 2 and last_adjective != 'origin' %},{% endif %}
+                            <a href="{{ modify_query(origin=None) }}" class="search-current-filters__close">{{ this_origin.filter_name }}</a>{% if adjectives > 2 and last_adjective != 'origin' %},{% endif %}
                         {% endif %}
-                        {% if request.args['proof'] %}
-                            {% if adjectives > 1 and last_adjective == 'proof' %}
-                                and
-                            {% endif %}
+
+                        {% if adjectives > 1 and last_adjective == 'proof' %}
+                            and
+                        {% endif %}
+                        {% if request.args['proof_low'] and request.args['proof_high'] %}
+                            bottled between
+                        {% elif request.args['proof_low'] or request.args['proof_high'] %}
                             bottled at
-                            <a href="{{ modify_query(proof=None) }}" class="search-current-filters__close">{{ proof_ranges[request.args['proof']].filter_name }}</a>{% if adjectives > 2 and last_adjective != 'proof' %},{% endif %}
                         {% endif %}
+                        {% if request.args['proof_low'] %}
+                            {% if not request.args['proof_high'] %}
+                                at least
+                            {% endif %}
+                            <a href="{{ modify_query(proof_low=None) }}" class="search-current-filters__close">
+                                {{ request.args['proof_low'] }}
+                                {% if not request.args['proof_high'] %}
+                                    proof
+                                {% endif %}
+                            </a>{% if not request.args['proof_high'] and adjectives > 2 and last_adjective != 'proof' %},{% endif %}
+                        {% endif %}
+                        {% if request.args['proof_high'] %}
+                            {% if request.args['proof_low'] %}
+                                and
+                            {% else %}
+                                at most
+                            {% endif %}
+                            <a href="{{ modify_query(proof_high=None) }}" class="search-current-filters__close">
+                                {{ request.args['proof_high'] }} proof
+                            </a>{% if adjectives > 2 and last_adjective != 'proof' %},{% endif %}
+                        {% endif %}
+
                         {% if request.args['price'] %}
                             {% if adjectives > 1 and last_adjective == 'price' %}
                                 and
@@ -87,6 +113,7 @@
                             <a href="{{ modify_query(price=None) }}" class="search-current-filters__close">{{ price_ranges[request.args['price']].filter_name }}</a>
                         {% endif %}
                         <span class="search-current-filters__nudge">.</span>
+
                         {% if request.args['sort'] %}
                             They're sorted by
                             <a href="{{ modify_query(sort=None) }}" class="search-current-filters__close">{{ review_sorts[request.args['sort']].filter_name }}</a>.
@@ -154,18 +181,16 @@
                         </div>
                         <div class="search-refine__facet grid__unit grid__unit--1-2-s grid__unit--1-3-m grid__unit--1-1-l">
                             <h3 class="search-refine__facet__title">Age</h3>
-                            <ul class="search-refine__facet__list">
-                                <form action="{{ request.path }}" method="GET">
-                                    <label class="form-label">
-                                        <span class="form-label__text">Minimum: <span data-from-input="age-low"></span></span>
-                                        <input type="range" name="age_low" id="age-low" min="-1" max="30" step="1" value="{{ request.args['age_low']|default(-1) }}" data-value-suffix="years" data-min-description="unknown" data-constrain-high="age-high" />
-                                    </label>
-                                    <label class="form-label">
-                                        <span class="form-label__text">Maximum: <span data-from-input="age-high"></span></span>
-                                        <input type="range" name="age_high" id="age-high" min="-1" max="30" step="1" value="{{ request.args['age_high']|default(30) }}" data-value-suffix="years" data-max-description="infinity" data-constrain-low="age-low" />
-                                    </label>
-                                </form>
-                            </ul>
+                            <form action="{{ request.path }}" method="GET">
+                                <label class="form-label">
+                                    <span class="form-label__text">Minimum: <span data-from-input="age-low"></span></span>
+                                    <input type="range" name="age_low" id="age-low" min="-1" max="30" step="1" value="{{ request.args['age_low']|default(-1) }}" data-value-suffix="years" data-min-description="unknown" data-constrain-high="age-high" />
+                                </label>
+                                <label class="form-label">
+                                    <span class="form-label__text">Maximum: <span data-from-input="age-high"></span></span>
+                                    <input type="range" name="age_high" id="age-high" min="-1" max="30" step="1" value="{{ request.args['age_high']|default(30) }}" data-value-suffix="years" data-max-description="infinity" data-constrain-low="age-low" />
+                                </label>
+                            </form>
                         </div>
                         <div class="search-refine__facet grid__unit grid__unit--1-2-s grid__unit--1-3-m grid__unit--1-1-l">
                             <h3 class="search-refine__facet__title">Distilled in</h3>
@@ -185,19 +210,16 @@
                         </div>
                         <div class="search-refine__facet grid__unit grid__unit--1-2-s grid__unit--1-3-m grid__unit--1-1-l">
                             <h3 class="search-refine__facet__title">Proof</h3>
-                            <ul class="search-refine__facet__list">
-                                {% for key, vals in proof_ranges.items()|sort(attribute='1.proof_min') %}
-                                    {% if request.args['proof'] == key %}
-                                        <li class="search-refine__facet__item is-current">
-                                            {{ vals['name'] }}
-                                        </li>
-                                    {% else %}
-                                        <li class="search-refine__facet__item">
-                                            <a href="{{ modify_query(proof=key) }}">{{ vals['name'] }}</a>
-                                        </li>
-                                    {% endif %}
-                                {% endfor %}
-                            </ul>
+                            <form action="{{ request.path }}" method="GET">
+                                <label class="form-label">
+                                    <span class="form-label__text">Minimum: <span data-from-input="proof-low"></span></span>
+                                    <input type="range" name="proof_low" id="proof-low" min="80" max="180" step="1" value="{{ request.args['proof_low']|default(80) }}" data-constrain-high="proof-high" />
+                                </label>
+                                <label class="form-label">
+                                    <span class="form-label__text">Maximum: <span data-from-input="proof-high"></span></span>
+                                    <input type="range" name="proof_high" id="proof-high" min="80" max="180" step="1" value="{{ request.args['proof_high']|default(180) }}" data-constrain-low="proof-low" />
+                                </label>
+                            </form>
                         </div>
                         <div class="search-refine__facet grid__unit grid__unit--1-2-s grid__unit--1-3-m grid__unit--1-1-l">
                             <h3 class="search-refine__facet__title">Price (MSRP)</h3>
